--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <title>Kyle Balingit's Portfolio</title>
     </head>
     <body>
@@ -47,7 +47,7 @@
         </section>
         <!-- about me end-->
 
-        <!-- work -->
+        <!-- work start -->
         <section id="work">
             <div class="flex-row">
                 <h2>
@@ -56,12 +56,32 @@
             </div>
 
             <div class="Portfolio">
-                <article class= "work-tiles">
-                    <img src=""
+                <article class="work-tiles">
+                    <div class="work-tile-bio">
+                        <h3 class="work-tile-names">Run Buddy</h3>
+                        <h4 class="work-tile-code">HTML and CSS</h4>
+                    </div>
+                    <img src="./assets/images/run_buddy.png" alt="" />
+                </article>
+
+                <article class="work-tiles">
+                    <div class="work-tile-bio">
+                        <h3 class="work-tile-names">Horiseon</h3>
+                        <h4 class="work-tile-code">HRML and CSS</h4>
+                    </div>
+                    <img src="./assets/images/horiseon.png" alt="" />
+                </article>
+
+                <article class="work-tiles">
+                    <div class="work-tile-bio">
+                        <h3 class="work-tile-names">Robot Gladiators</h3>
+                        <h4 class="work-tile-code">JSS</h4>
+                    </div>
+                    <img src="./assets/images/robot_gladiators.jpg" alt="" />
                 </article>
             </div>
         </section>
-        <!-- work end-->
+        <!-- work end -->
 
         <!-- contact start -->
         <section id="contact">
