--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="flex-row">
                 <p>
-                    I'm a cool dude ya know?
+                    Hello and welcome to my portfolio site! As time goes on, this site will improve. Sit back, and enjoy the program! 
                 </p>
             </div>
         </section>
