final edits before submit

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <h2>
                     Resume
                 </h2>
+                <embed src="./assets/images/Kyle_Balingits_Resume.pdf">
             </div>
         </section>
         <!-- resume end-->
