--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <article class="work-tiles">
                     <div class="work-tile-bio">
                         <h3 class="work-tile-names">Horiseon</h3>
-                        <h4 class="work-tile-code">HRML and CSS</h4>
+                        <h4 class="work-tile-code">HTML and CSS</h4>
                     </div>
                     <img src="./assets/images/horiseon.png" alt="" />
                 </article>
