final edits before submit

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <h3 class="work-tile-names">Horiseon</h3>
                         <h4 class="work-tile-code">HTML and CSS</h4>
                     </div>
-                    <img src="./assets/images/horiseon.png" alt="" />
+                    <img src="./assets/images/Horiseon.png" alt="" />
                 </article>
 
                 <article class="work-tiles">
