--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- navigation tags start -->
     <header>
         <h1>
-            <a href="/">Kyle Balingit's Portfolio</a>
+            <a href="https://carpetonberry.github.io/kbalingit_portfolio/">Kyle Balingit's Portfolio</a>
         </h1>
         <nav>
             <ul>
@@ -58,6 +58,17 @@
                 Work
             </h2>
         </div>
+
+        <article class="work-tiles-main">
+            <div class="work-tile-bio">
+                <h3 class="work-tile-names">Debug Comparison</h3>
+                <h4 class="work-tile-code">HTML/CSS/JS</h4>
+            </div>
+            <a href="https://github.com/CarpeTonberry/Debug_Comparison/" target="_blank">
+                <img src="./assets/images/Debug_Comparison.png" alt="" />
+            </a>
+        </article>
+
         <div class="portfolio">
             <article class="work-tiles">
                 <div class="work-tile-bio">
@@ -101,9 +112,18 @@
         </div>
 
         <div class="block-txt-2">
-            <p>
-                Call me beep me if you want to reach me at 555-555-5555
-            </p>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/kyle-balingit-7aa81b10a">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/CarpeTonberry" target="_blank">Git Hub</a>
+                </li>
+                <li>
+                    <a href="mailto: kylebalingit@gmail.com">KyleBalingit@Gmail.com</a>
+                </li>
+
+            </ul>
         </div>
     </section>
     <!-- contact end -->
@@ -120,9 +140,9 @@
 
     <!-- footer start -->
     <footer class="footer">
-        <h2>
+        <h9>
             ❤️ Made with Love by CarpeTonberry ❤️
-        </h2>
+        </h9>
     </footer>
     <!-- footer end  -->
 </body>
