--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
     <!-- navigation tags start -->
     <header>
         <h1>
@@ -114,7 +113,7 @@
         <div class="block-txt-2">
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/kyle-balingit-7aa81b10a">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/kyle-balingit-7aa81b10a" target="_blank">LinkedIn</a>
                 </li>
                 <li>
                     <a href="https://github.com/CarpeTonberry" target="_blank">Git Hub</a>
