--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
         <div class="block-txt">
             <p>
-                Hello and welcome to my portfolio site! As time goes on, this site will improve. Sit back, and enjoy the
-                program!
+                I’m currently working towards my goal of becoming a full stack web developer. This site will continue to
+                grow as I work through the many challenges coding has to offer. Please feel free to reach out if you
+                have any questions or if you use want to say hi!
             </p>
         </div>
     </section>
