--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- nagivation tags end -->
 
     <!-- about me start -->
+    <img src="assets/images/profile_pic.jpg" class="profile-pic" alt="kyle balingit smiling in a blue shirt" />
     <section id="about-me" class="about-me">
         <div class="section-header">
             <h2>
@@ -65,7 +66,8 @@
                 <h4 class="work-tile-code">HTML/CSS/JS</h4>
             </div>
             <a href="https://github.com/CarpeTonberry/Debug_Comparison/" target="_blank">
-                <img src="./assets/images/Debug_Comparison.png" alt="" />
+                <img src="./assets/images/Debug_Comparison.png"
+                    alt="kyle balingits first coding project using HTML, CSS, and JS" />
             </a>
         </article>
 
@@ -76,7 +78,8 @@
                     <h4 class="work-tile-code">HTML and CSS</h4>
                 </div>
                 <a href="https://carpetonberry.github.io/run-buddy/" target="_blank">
-                    <img src="./assets/images/run_buddy.png" alt="" />
+                    <img src="./assets/images/run_buddy.png"
+                        alt="kyle balingits second coding project using HTML and CSS" />
                 </a>
             </article>
 
@@ -86,7 +89,8 @@
                     <h4 class="work-tile-code">HTML and CSS</h4>
                 </div>
                 <a href="https://carpetonberry.github.io/HTML-CSS_Refactor_Code_Horiseon/" target="_blank">
-                    <img src="./assets/images/Horiseon.png" alt="" />
+                    <img src="./assets/images/Horiseon.png"
+                        alt="kyle balingits third coding project refactoring HTML and CSS" />
                 </a>
             </article>
 
@@ -96,7 +100,8 @@
                     <h4 class="work-tile-code">JSS</h4>
                 </div>
                 <a href="https://carpetonberry.github.io/robot-gladiators/" target="_blank">
-                    <img src="./assets/images/robot_gladiators.jpg" alt="" />
+                    <img src="./assets/images/robot_gladiators.jpg"
+                        alt="kyle balingits fourth coding project using JS" />
                 </a>
             </article>
         </div>
