Updated Home Link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- navigation tags start -->
     <header>
         <h1>
-            <a href="https://carpetonberry.github.io/kbalingit_portfolio/">Kyle Balingit's Portfolio</a>
+            <a href="https://carpetonberry.github.io/HTML-CSS_Kbalingit_Portfolio/">Kyle Balingit's Portfolio</a>
         </h1>
         <nav>
             <ul>
