--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
                 </a>
             </article>
         </div>
+
+        <article class="work-tiles-main">
+            <div class="work-tile-bio">
+                <h3 class="work-tile-names">BookFinder</h3>
+                <h4 class="work-tile-code">HTML/CSS/JS/API</h4>
+            </div>
+            <a href="https://carpetonberry.github.io/HTML-CSS-JS_BookFinder/" target="_blank">
+                <img src="./assets/images/book_finder.png"
+                    alt="kyle balingits first team project using HTML, CSS, JS, and APIs" />
+            </a>
+        </article>
     </section>
     <!-- work end -->
 
