--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
                     alt="kyle balingits first team project using HTML, CSS, JS, and APIs" />
             </a>
         </article>
+
+        <article class="work-tiles-main">
+            <div class="work-tile-bio">
+                <h3 class="work-tile-names">BookFinder</h3>
+                <h4 class="work-tile-code">HTML/CSS/JS/API</h4>
+            </div>
+            <a href="https://github.com/CarpeTonberry/explore-venue" target="_blank">
+                <img src="./assets/images/exploreVenue.png" alt="kyle balingits second team project" />
+            </a>
+        </article>
     </section>
     <!-- work end -->
 
