--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <article class="work-tiles-main">
             <div class="work-tile-bio">
-                <h3 class="work-tile-names">BookFinder</h3>
+                <h3 class="work-tile-names">Explore Venue</h3>
                 <h4 class="work-tile-code">HTML/CSS/JS/API</h4>
             </div>
             <a href="https://github.com/CarpeTonberry/explore-venue" target="_blank">
